--- a/HMGreenCityMLM/HMGreenCityMLM/Views/ForgotPassword/ForgotPassword.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/ForgotPassword/ForgotPassword.cshtml
@@ -11,7 +11,7 @@
 
     <meta name="description" content="">
     <meta name="author" content="ScriptsBundle">
-    <title>Dhara MLM Login</title>
+    <title>HM Green City Login</title>
     <!-- =-=-=-=-=-=-= Favicons Icon =-=-=-=-=-=-= -->
     <link rel="shortcut icon" type="../../Websitecss/Websitecss/image/x-icon" href="../../Websitecss/images/fevicon.png" />
     <!-- =-=-=-=-=-=-= Mobile Specific =-=-=-=-=-=-= -->
@@ -293,7 +293,7 @@
                             <div class="widget widget-newsletter">
                                 <h5>Overview</h5>
                                 <div class="fieldset">
-                                    <p>Dhara World is an online platform where every individual creates an opportunity to accomplish their dreams. By the teamwork we gather people of India in our organization to create income opportunity that improves economical growth & status of India <a href="#">Read More</a></p>
+                                    <p>HM Green City is an online platform where every individual creates an opportunity to accomplish their dreams. By the teamwork we gather people of India in our organization to create income opportunity that improves economical growth & status of India <a href="#">Read More</a></p>
 
                                 </div>
                             </div>
