--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/PrintTopUp.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/PrintTopUp.cshtml
@@ -52,7 +52,7 @@
                     <h3>Phone : @ViewBag.LandLine</h3>
                 </td>
                 <td colspan="3" style="text-align:right; padding-right:20px">
-                    <img src="~/images/dhara-logo.png" height="150" width="150" />
+                    <img src="../images/hmlogo.png" height="150" width="150" />
                 </td>
             </tr>
             <tr>
@@ -169,11 +169,11 @@
                     <ul>
                         <li>All disputes will be subject to Lucknow jurisdiction</li>
                         <li>Listed above have been received in order and in saleable condition.</li>
-                        <li>Payment must be made by Cash/ Demand Draft only in favour of Dhara World</li>
+                        <li>Payment must be made by Cash/ Demand Draft only in favour of HM Green City</li>
                     </ul>
                 </td>
                 <td colspan="5">
-                    <b>Dhara World</b>
+                    <b>HM Green City</b>
                     <br />
                     Authorised Signatory
                 </td>
