--- a/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/PayoutReceipt.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/PayoutReceipt.cshtml
@@ -29,7 +29,7 @@
                         @ViewBag.Email
                     </td>
                     <td>
-                        <img height="100" width="100" src="~/images/dhara-logo.png" class="pull-right" />
+                        <img height="100" width="100" src="../images/hmlogo.png" class="pull-right" />
                     </td>
                 </tr>
             </table>
