--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -132,10 +132,10 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <div class="alert alert-info">
+                    <div class="alert alert-info hrefcol">
                         <p>http://admin.hmgreencity.com/Home/Registration?Pid=@Session["LoginId"]&lg=Left </p>
                     </div>
-                    <div class="alert alert-info">
+                    <div class="alert alert-info hrefcol">
                         <p>http://admin.hmgreencity.com/Home/Registration?Pid=@Session["LoginId"]&lg=Right </p>
                     </div>
                 </div>
