tree changes for mobile

--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
@@ -521,7 +521,7 @@
                                                         </div>
                                                         <div class="form-group col-md-12">
                                                             <div class="col-sm-12 col-md-12" id="chart">
-                                                                <div class="tree family-tree clearfix">
+                                                                <div class="tree family-tree clearfix" style="overflow-x:auto">
                                                                     <ul>
                                                                         <li id="firstRow">
                                                                             <a href="" id="firstHead"></a>
@@ -1105,7 +1105,8 @@
 
                     }
 
-                    if (winWidth > 766) {
+                    //if (winWidth > 766)
+                    {
                         if (id != null) {
                             $.ajax({
                                 type: "POST",
@@ -1212,7 +1213,8 @@
                                                     ul2.append(freeBlock + child);
                                                 }
                                             }
-                                            if (winWidth > 980) {
+                                            //if (winWidth > 980)
+                                            {
                                                 if (id != null) {
                                                     $.ajax({
                                                         type: "POST",
@@ -1335,11 +1337,11 @@
                                                     });
                                                 }
                                             }
-                                            else {
-                                                $("#firstRow").fadeIn(1000);
-                                                $("#firstHead").attr("style", "opacity:1;");
-                                                $('[id*="level"]').fadeIn(300);
-                                            }
+                                            //else {
+                                            //    $("#firstRow").fadeIn(1000);
+                                            //    $("#firstHead").attr("style", "opacity:1;");
+                                            //    $('[id*="level"]').fadeIn(300);
+                                            //}
                                         });
                                         $("#level" + i).append(ul2);
                                     }
@@ -1358,12 +1360,12 @@
                             });
                         }
                     }
-                    else {
-                        $("#firstRow").fadeIn(1000);
-                        $("#firstHead").attr("style", "opacity:1;");
-                        $('[id*="level"]').fadeIn(500);
-                        $("#firstRow").append(ul);
-                    }
+                    //else {
+                    //    $("#firstRow").fadeIn(1000);
+                    //    $("#firstHead").attr("style", "opacity:1;");
+                    //    $('[id*="level"]').fadeIn(500);
+                    //    $("#firstRow").append(ul);
+                    //}
                 });
                 $("#firstRow").append(ul);
             }
