--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/BinaryTree.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/BinaryTree.cshtml
@@ -284,32 +284,32 @@
 
 
     i.men-active {
-        width: 50px !important;
-        height: 50px !important;
+        width: 50px ;
+        height: 50px;
         background-image: url(../../images/TreeIcon/men-active.png) !important;
         display: block;
         margin: 0 auto;
     }
 
     i.men-inactive {
-        width: 50px !important;
-        height: 50px !important;
+        width: 50px;
+        height: 50px;
         background-image: url(../../images/TreeIcon/men-inactive.png) !important;
         display: block;
         margin: 0 auto;
     }
 
     i.girl-active {
-        width: 50px !important;
-        height: 50px !important;
+        width: 50px;
+        height: 50px;
         background-image: url(../../images/TreeIcon/girl-active.png) !important;
         display: block;
         margin: 0 auto;
     }
 
     i.girl-inactive {
-        width: 50px !important;
-        height: 50px !important;
+        width: 50px;
+        height: 50px;
         background-image: url(../../images/TreeIcon/girl-inactive.png) !important;
         display: block;
         margin: 0 auto;
