--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/BinaryTree.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/BinaryTree.cshtml
@@ -539,7 +539,7 @@
                                                                                     <div class="form-row">
                                                                                         <div class="form-group col-md-9">
                                                                                             <button type="button" class="next-tree" onclick='ClickHere(this)'>
-                                                                                                <a style="background-color: white;" title="Go Down" class="clip-tree"><i class="fa fa-bars" aria-hidden="true"></i></a>
+                                                                                                <a style="background-color: white;" title="Go Down" class="clip-tree"><i class="fa fa-users" aria-hidden="true"></i></a>
 
                                                                                             </button>
                                                                                             <div class="media-body">
