--- a/HMGreenCityMLM/HMGreenCityMLM/css/tree.css
+++ b/HMGreenCityMLM/HMGreenCityMLM/css/tree.css
@@ -224,8 +224,8 @@ Thanks :)*/
             background: #607D8B !important;
             font-weight: normal;
             color: #2b2b2b;
-            width: 30px !important;
-            margin-left: -5px !important;
+            /*width: 30px !important;
+            margin-left: -5px !important;*/
         }
         .dp
         {
