Topup Report changes

--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
@@ -75,6 +75,8 @@
                                                                 <th>Sr No.</th>
                                                                 <th>Login Id</th>
                                                                 <th>Name</th>
+                                                                <th>Site Name</th>
+                                                                <th>Sector Name</th>
                                                                 <th>PlotNo</th>
                                                                 <th>Description</th>
                                                                 <th>Upgradation Date</th>
@@ -96,6 +98,8 @@
                                                                             <td>@i</td>
                                                                             <td>@Item.LoginId</td>
                                                                             <td>@Item.DisplayName</td>
+                                                                            <td>@Item.SiteName</td>
+                                                                            <td>@Item.SectorName</td>
                                                                             <td>@Item.PlotNumber</td>
                                                                             <td>@Item.Description</td>
                                                                             <td>@Item.UpgradtionDate</td>
