--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/TopupList.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/TopupList.cshtml
@@ -37,6 +37,8 @@
                                                     <tr>
                                                         <th>Sr No.</th>
                                                         <th>Name</th>
+                                                        <th>Site Name</th>
+                                                        <th>Sector Name</th>
                                                         <th>Upgradation Date</th>
                                                         <th>Product Name</th>
                                                         <th>Amount</th>
@@ -54,6 +56,8 @@
                                                                 <tr class="text-left">
                                                                     <td>@i</td>
                                                                     <td>@Item.Name</td>
+                                                                    <td>@Item.SiteName</td>
+                                                                    <td>@Item.SectorName</td>
                                                                     <td>@Item.UpgradtionDate</td>
                                                                     <td>@Item.ProductName</td>
                                                                     <td>@Item.Amount</td>
